--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "version": "0.1.0",
   "author": "Rachelle Rathbone",
   "dependencies": {
-    "gatsby": "^2.18.2",
+    "gatsby": "^2.18.7",
+    "gatsby-cli": "^2.8.16",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-offline": "^3.0.11",
     "gatsby-plugin-react-helmet": "^3.1.10",
